crates/compiler/src/tests/e2e/good/0141_reference_mutation/main.gom
fn main() {
    let x: Ref[int32] = ref(42);
    let y: Ref[int32] = x;
    ref_set(y, 100);
    println(ref_get(x).to_string());
    println(ref_get(y).to_string());
    println((ref_get(x) == ref_get(y)).to_string());
}
