crates/compiler/src/tests/e2e/bad/0049_method_new_not_found_generic/main.gom
struct Stack[T] {
    items: Vec[T],
    size: Ref[int32],
}

impl Stack[int32] {
    fn new() -> Stack[int32] {
        Stack { items: vec_new(), size: ref(0i32) }
    }
}

fn main() {
    let s = Stack::new();
    println(ref_get(s.size).to_string());
}
